# icosph_nn

./: .gitignore  plan.txt  pyproject.toml  setup.py
src/backend/: conv.cpp  utils.cpp
src/icosph_nn/: __init__.py  _backend.cp313-win_amd64.pyd  conv.py  gradient.py  icosphere.py  t.py  utils.py  visuals.py
